<resources>
    <string name="app_name">PrecioScan</string>
    <string name="precio_scan">Precio Scan</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Password</string>
    <string name="iniciar_session">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="appicon">AppIcon</string>
    <string name="title_activity_main">PrecioScan</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_home">Productos</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="product_image">Product descripton</string>
    <string name="productName">Nombre del producto</string>
    <string name="available_stores">Tiendas Disponibles</string>
    <string name="suggested_products">Productos sugeridos</string>
    <string name='store_name'>Nombre de tienda</string>
    <string name="removeSelectedStore">Remover tienda seleccionada</string>
    <string name="placeholderselectedstore">Searching By SelectedStore</string>
    <string name="remover">Remover</string>
    <string name="title_activity_search_results">Resultados</string>
    <string name="related_products">Productos relacionados</string>
    <string name="product_detail">Detalle del Producto</string>
    <string name="product_not_valid">Producto no válido</string>
    <string name="agregado_a_favoritos">Agregado a favoritos</string>
    <string name="title_favs">Favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Perfil</string>
    <string name="buscando_en">Buscando en %1$s</string>
    <string name="expired_session">Sesión expirada</string>
    <string name="logged_required">Para continuar debes iniciar sesion</string>
    <string name="login">Iniciar Sesión</string>
    <string name="favoritos">Favoritos</string>
    <string name="user_icon">User icon</string>
    <string name="datos_del_usuario">Datos del usuario</string>
    <string name="informacion_personal">Información Personal</string>
    <string name="nombres_label">Nombres</string>
    <string name="dummy_name">Jhonn Doe</string>
    <string name="email_icon">Email Icon</string>
    <string name="dummy_mail">ejemplo@dominio.com</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="telefono">Telefono</string>
    <string name="dummy_phone">+505 1234 5678</string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="cambiar_clave">Cambiar Contraseña</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
</resources>