<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:padding="8dp">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:iconifiedByDefault="false"
        app:queryHint="Buscar productos..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/home_selected_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintEnd_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/rounded_corners_shape">
        <TextView
            android:id="@+id/selectedStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:layout_constraintEnd_toStartOf="parent"
            android:textSize="18sp"
            android:text="@string/placeholderselectedstore"
            />
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/txtRemoverTienda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remover"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorPrimary"
            android:height="48dp"
            android:gravity="center"
            />


    </LinearLayout>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loadingProducts"
        app:layout_constraintTop_toBottomOf="@+id/home_selected_store"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:progressTint="@color/colorPrimary"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/suggested_products"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/loadingProducts"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHomeProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/products_card_item"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_stores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/available_stores"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/rvHomeProducts"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStores"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/store_card_item"
        app:layout_constraintTop_toBottomOf="@+id/text_stores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>